Update Gradle to Version 7.4. Use openJDK nashorn version instead of deprecated version bundled in jdk. (this will break in java14+) Propagate AssertionErrors in threaded test to main thread to assure propper handling by junit Ignore Line endings in tests to make tests multiPlatform compatible bump compatibility version to java 17 remove deprecated maven plugin